--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <div>
         <h1>
           Go ahead and create a quote... There's probably better ones already
-          sumbitted anyways
+          submitted anyways
         </h1>
         <h2></h2>
         <form>
